assets/css/newStyle.css
.navbar {
    background-color: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(5px);
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

.navheading {
    font-weight: 300;
    font-family: "Urbanist", serif;
    margin-inline: 10px;
    text-decoration: none;
    color: black;
}

section {
    margin-top: 7rem;
}

#home {
    background-image:
        linear-gradient(rgba(255, 255, 255, 0.6), rgb(255, 255, 255)),
        url('./../media/1SecBg2.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    height: 500px;
}

.blur-gradient {
    width: 350px;
    height: 350px;
    border-radius: 50%;
    background: conic-gradient(rgba(57, 167, 255, 0.9) 0deg 160deg,
            rgba(95, 188, 255, 0.6) 160deg 300deg,
            rgb(255, 255, 255) 300deg 360deg);
    filter: blur(100px);
    animation: rotate 8s linear infinite;
}

@keyframes rotate {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

.content {
    position: absolute;
    top: 70%;
    left: 51%;
    transform: translate(-50%, -50%);
    max-width: 95vw;
    color: black;
    text-align: center;
}

.content h1 {
    font-size: 70px;
    background: linear-gradient(to right, #000000, #000000, #ffffff, #ffffff, #000000, #000000);
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
    font-family: "Urbanist", serif;
    font-weight: 600;
    line-height: 1;
    margin-block: 15px;
}

.content p {
    font-family: "Urbanist", serif;
    font-weight: 400;
}

.getquoteBtn {
    margin-top: 20px;
    font-family: "Urbanist", serif;
    font-weight: 600;
    text-decoration: none;
    color: #ffffff;
    background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(48, 55, 62, 1) 50%, rgba(0, 0, 0, 1) 100%);
    padding: 14px;
    padding-inline: 22px;
}

.getquoteBtn:hover {
    color: #ffffff;
    background: radial-gradient(circle, rgba(48, 55, 62, 1) 0%, rgb(0, 0, 0) 50%, rgba(48, 55, 62, 1) 100%);
}

#number h6 {
    font-family: "Inter", serif;
    font-weight: 300;
    font-size: 16px;
    color: rgba(48, 55, 62, 1);
    margin-bottom: 23px;
}

#number h4 {
    font-family: "Urbanist", serif;
    font-weight: 500;
    line-height: 1.3;
}

#number h4 span {
    color: rgba(57, 167, 255, 1);
}

.tapered-line-hotizontal {
    width: 100%;
    height: 20px;
    background: #555;
    clip-path: polygon(50% 71%, 100% 72%, 49% 73%, 0 72%);
}

.tapered-line-vertical {
    height: 100%;
    background: #555;
    clip-path: polygon(47% 28%, 48% 49%, 47% 71%, 46% 50%);
}

#number h1 {
    font-family: "Urbanist", serif;
    font-weight: 600;
    font-size: 70px;
    color: rgba(57, 167, 255, 1);
}

#number p,
#works p,
.copyright {
    font-family: "Inter", serif;
    font-weight: 300;
    font-size: 13px;
    color: rgba(23, 23, 23, 1);
}

#challenges h2,
#works h2 {
    background: radial-gradient(circle at top right, rgba(17, 17, 17, 1), rgba(45, 45, 45, 1), rgba(57, 167, 255, 1));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    color: transparent;
    font-family: "Urbanist", serif;
    font-weight: 600;
    font-size: 30px;
}

.cardBackground {
    background-color: rgba(57, 167, 255, 0.06);
    border-radius: 10px;
    margin-top: 3rem;
    line-height: 1.7;
}

.cardBackground h3 {
    font-family: "Urbanist", serif;
    font-weight: 400;
    font-size: 24px;
    margin-bottom: 20px;
}

.cardBackground p {
    font-family: "Urbanist", serif;
    font-weight: 300;
    font-size: 12px;
    padding-bottom: 40px;
}

#services {
    margin-top: 160px;
}

.our-headings {
    font-family: "Urbanist", serif;
    font-weight: 700;
    font-size: 60px;
    line-height: 0.8;
    margin-left: 60px;
}

#contactus {
    margin: 0;
    margin-top: 8em;
}


#contactus p {
    font-family: "Urbanist", serif;
    font-weight: bold;
    font-size: larger;
}

.our-headings span {
    color: rgba(57, 167, 255, 1);
}

.servicecard {
    background: conic-gradient(from 135deg,
            rgba(208, 241, 249, 0.05) 0%,
            rgba(208, 241, 249, 0.05) 33%,
            /* Transition to new foggy color */
            rgba(160, 200, 255, 0.1) 33%,
            /* New foggy color starts */
            rgba(160, 200, 255, 0.1) 66%,
            /* New foggy color ends */
            rgba(57, 167, 255, 0.05) 66%,
            rgba(57, 167, 255, 0.05) 100%);
    border-radius: 20px;
    padding: 0;
    margin: 5px;
    border: rgba(57, 167, 255, 0.05) solid 1px;
}

.servicecard h2 {
    font-family: "Urbanist", serif;
    font-weight: 500;
    font-size: 40px;
    background: linear-gradient(135deg, rgba(45, 45, 45, 1), rgba(45, 45, 45, 1), rgba(255, 255, 255, 0.3));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.servicecard p,
label {
    font-family: "Urbanist", serif;
    font-weight: 400;
    font-size: 12px;
    background: linear-gradient(135deg, rgba(45, 45, 45, 1), rgba(45, 45, 45, 1), rgba(255, 255, 255, 0.725));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}


.contact-div {
    padding: 3em;
    margin: 1em;
}

#quote {
    margin: 5rem;
    margin-top: 10rem;
}

#quote h1 {
    background: radial-gradient(circle, rgba(45, 45, 45, 1), rgba(208, 241, 249, 1));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    color: transparent;
    font-family: "Urbanist", serif;
    font-weight: 600;
    font-size: 90px;
    line-height: 0.77;
}

#quote p {
    font-family: "Urbanist", serif;
    font-weight: 400;
    font-size: 20px;
}

#clients {
    margin-top: 150px;
}

.Client-logo {
    /* height: 80px;
    width: auto; */
    margin-inline: 20px;
}

#hintlogo {
    height: 60px;
    margin: 0.5em;
}

#works {
    margin-top: 7rem;
    padding: 1em;
}


/* slider section working */
.slider-container {
    overflow-y: scroll;
}

.slider-images {
    display: flex;
    flex-direction: column;
}

/* Hide the element by animating its width to 0, and apply opacity and transform */
.display-none {
    opacity: 0;
    transform: translateY(-20px);
    pointer-events: none;
    width: 0;
    transition: width 0.5s ease, opacity 0.5s ease, transform 0.5s ease;
}

/* Show the element by resetting width, opacity, and transform */
.display-none-opps {
    opacity: 1;
    transform: translateY(0);
    pointer-events: auto;
    width: 100%;
}

/* slider section working */

/* smaller devices */
@media (max-width: 992px) {
    .dis-none {
        display: none;
    }

    .blur-gradient {
        width: 250px;
        height: 250px;
    }

    .content h1 {
        font-size: 45px;
        padding-top: 3em;
    }

    .content p {
        padding-top: 2em;
        font-size: 16px;
    }

    #number h4 {
        font-size: 30px;
    }

    .innumber{
        margin-top: 10em;
    }

    .our-headings {
        margin-bottom: 30px;
        margin-left: unset;
    }

    .servicecard {
        margin-block: 20px;
    }

    .tapered-line-hotizontal {
        display: none;
    }

    #quote {
        margin: unset;
        margin-top: 10rem;
    }

    .Client-logo {
        height: 150px;
        margin-block: 40px;
        width: auto;
        margin-inline: unset;
    }

    .contact-div {
        padding: 0.5em;
        margin-top: 2em;
        margin-bottom: 4em;
    }

    .our-headings{
        padding-left: 0.1em;
    }

}

input,
textarea {
    padding: 10px;
    font-size: 16px;
    border: 1px solid #000000;
    border-radius: 4px;
    width: 100%;
    box-sizing: border-box;
}

/* Style the placeholder text */
input::placeholder,
textarea::placeholder {
    color: #d3d3d3;
    font-weight: normal;
    font-size: smaller;

}

/* Focus styles for input and textarea */
input:focus,
textarea:focus {
    border-color: #007bff;
    outline: none;
}

/* Style for the input when it's focused */
input:focus::placeholder,
textarea:focus::placeholder {
    color: #cdcdcd;
    font-style: normal;
}

